<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">My Deezer radio</string>
    <string name="action_settings">Settings</string>
    <string name="main_editText_email">Adresse mail</string>
    <string name="main_editText_password">Mot de passe</string>
    <string name="main_button_connect">Connexion</string>
    <string name="main_textView_rememberMe">Se souvenir de moi</string>
    <string name="mainV2_button_connect">Connexion</string>
    <string name="mainV2_button_disconnect">Déconnexion</string>
    <string name="title_activity_song_input">SongInput</string>
    <string name="songInput_editText_song">Chanson de départ ?</string>
    <string name="songInput_button_search">Recherche</string>
    <string name="songInput_button_return">Retour</string>
    <string name="songInput_button_goToFavorite">Favoris</string>
    <string name="title_activity_song_selection">SongSelection</string>
    <string name="songSelection_button_return">Retour</string>
    <string name="title_activity_song_listening">SongListeningActivity</string>
    <string name="songListening_button_return">Retour</string>
    <string name="songListening_imageView_cover_description">Image de couverture</string>
    <string name="songListening_imageButton_play_description">PLAY</string>
    <string name="songListening_imageButton_pause_description">PAUSE</string>
    <string name="songListening_imageButton_next_description">NEXT</string>
    <string name="songListening_textView_progression">0 %</string>
    <string name="title_activity_favorite_songs">FavoriteSongsActivity</string>
    <string name="favoriteSongs_button_return">Retour</string>

</resources>