<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deezer_background_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SongInputActivity" >

    <EditText
        android:id="@+id/songInput_editText_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="13"
        android:hint="@string/songInput_editText_song"
        android:inputType="text" 

        />

    <Button
        android:id="@+id/songInput_button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songInput_editText_song"
        android:layout_centerHorizontal="true"
        android:onClick="songInput_onClick_search"
        android:text="@string/songInput_button_search" />
    
    <Button
        android:id="@+id/songInput_button_goToFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songInput_button_search"
        android:layout_centerHorizontal="true"
        android:onClick="songInput_onClick_goToFavorite"
        android:text="@string/songInput_button_goToFavorite"
        />

    <Button
        android:id="@+id/songInput_button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="songInput_onClick_return"
        android:text="@string/songInput_button_return" />

</RelativeLayout>