<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/main_editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="13"
        android:hint="@string/main_editText_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/main_editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_editText_email"
        android:layout_alignRight="@+id/main_editText_email"
        android:layout_below="@+id/main_editText_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/main_editText_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/main_checkBox_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_editText_email"
        android:layout_below="@+id/main_editText_password" />

    <TextView
        android:id="@+id/main_textView_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/main_checkBox_rememberMe"
        android:layout_toRightOf="@+id/main_checkBox_rememberMe"
        android:text="@string/main_textView_rememberMe" />

    <Button
        android:id="@+id/main_button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="main_onClick_connect"
        android:text="@string/main_button_connect" />

</RelativeLayout>